# RepFlow

./: .gitignore  README.md  REQFLOW_STITCHING_PLAN.md  docker-compose.yml
.claude/: settings.local.json
docs/: README.md  affected-req001-xss.json  graph-stats.json  impact-req001-xss.json  impact-req002-jwt.json  workflow-report.md
frontend/: Dockerfile  nginx-frontend.conf  package.json  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.tsx  GraphView.tsx  ImpactReport.tsx  NodePanel.tsx  SearchBar.tsx
gateway/: nginx.conf
repos/BASIL/: Containerfile-api-debian
repos/BASIL/db/: db_orm.py
repos/BASIL/examples/import/reqs/: reqs.csv
repos/canopy/: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  justfile
repos/canopy/docs/: setup.md
repos/canopy/src/: chunker.rs  cluster.rs  config.rs  embed.rs  git.rs  graph.rs  lib.rs  main.rs  query.rs  resolve.rs  store.rs  synthesis.rs  view.html  view.rs
repos/canopy/src/cli/: cluster.rs  map.rs  mod.rs  search.rs  trace.rs
repos/canopy/tests/: chunker_test.rs  cluster_test.rs  config_test.rs  embed_test.rs  exploration_integration_test.rs  graph_test.rs  map_test.rs  query_test.rs  resolve_test.rs  search_test.rs  store_test.rs  synthesis_test.rs  trace_test.rs  view_test.rs
repos/hedwig-code-graph/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
repos/hedwig-code-graph/.github/workflows/: ci.yml  release.yml
repos/hedwig-code-graph/docs/: README_de.md  README_ja.md  README_ko.md  README_zh.md
repos/hedwig-code-graph/hedwig_cg/: __init__.py  __main__.py  mcp_server.py  skill.md
repos/hedwig-code-graph/hedwig_cg/cli/: __init__.py  _helpers.py  integrations.py  main.py  viz_template.html
repos/hedwig-code-graph/hedwig_cg/core/: __init__.py  analyze.py  build.py  cluster.py  detect.py  extract.py  git_cochange.py  lang_detect.py  pipeline.py  tags_extract.py  ts_extract.py
repos/hedwig-code-graph/hedwig_cg/queries/: c_sharp-tags.scm  kotlin-tags.scm  objc-tags.scm
repos/hedwig-code-graph/hedwig_cg/query/: __init__.py  embeddings.py  hybrid.py
repos/hedwig-code-graph/hedwig_cg/scripts/: auto_rebuild.sh
repos/hedwig-code-graph/hedwig_cg/storage/: __init__.py  store.py
repos/hedwig-code-graph/tests/: test_build.py  test_cli.py  test_community.py  test_detect.py  test_e2e_pipeline.py  test_extract.py  test_git_cochange.py  test_hybrid.py  test_incremental.py  test_lang_detect.py  test_markdown_extract.py  test_mcp_server.py  test_pipeline.py  test_store.py  test_ts_extract_js.py  test_ts_extract_typescript.py  test_visualization.py
repos/revos-main/: .gitignore  README.md  package.json  pnpm-lock.yaml
repos/revos-main/.github/workflows/: test.yml
repos/revos-main/.revos/: rules.json
repos/revos-main/apps/cli/: .npmignore  LICENSE  README.md  package.json
repos/revos-main/apps/cli/src/: index.ts
repos/revos-main/apps/cli/src/__tests__/: cli.e2e.test.ts
repos/revos-main/docs/: configuration.md  laravel.md  plugins.md  presets.md  python.md  real-world-testing.md
repos/revos-main/examples/github-actions/: revos.yml
repos/revos-main/examples/laravel-clean-architecture/: README.md  composer.json
repos/revos-main/examples/laravel-clean-architecture/app/Http/Controllers/: UserController.php
repos/revos-main/examples/laravel-clean-architecture/app/Models/: EloquentUser.php
repos/revos-main/examples/laravel-clean-architecture/src/Application/Users/: CreateUser.php
repos/revos-main/examples/laravel-clean-architecture/src/Domain/Entities/: User.php
scripts/: basil_workflow.py
services/basilext/: Dockerfile  bridge.py  requirements.txt
services/graph-engine/: Dockerfile  app.py  impact.py  requirements.txt
(+1 files in other folders)
